# Mixi

./: .env.production.example  .gitignore  AGENTS.md  PRODUCT.md  compose.prod.yml  compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  uv.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_git_data_sources.py
backend/app/: main.py
backend/app/agent/: __init__.py  base.py  registry.py  worklog.py
backend/app/agent/graph/: __init__.py  checkpoint.py  graph.py  models.py  nodes.py  runtime.py  state.py  trace.py
backend/app/agent/subgraphs/: __init__.py  base.py
backend/app/agents/: graph.py  nodes.py
backend/app/api/: auth.py  deps.py  permissions.py  routes.py
backend/app/api/endpoints/: agents.py  auth.py  git_data_sources.py  mixi.py  runs.py  users.py  workspaces.py
backend/app/core/: config.py  llm.py  security.py
backend/app/db/: models.py  postgres.py
backend/app/db/repositories/: __init__.py  agent.py  base.py  (+5 more)
backend/app/observability/: logging.py
backend/app/schemas/: agent.py  auth.py  common.py  git_data_source.py  mixi.py  run.py  user.py  worklog.py  workspace.py
backend/app/services/: git_remote.py  mixi.py  time_range.py  worklog_intake.py  worklog_refiner.py
backend/app/tools/: __init__.py  git_repository.py  registry.py
backend/tests/: test_business_tools.py  test_git_tool.py  test_mixi_endpoint.py  test_mixi_router.py  test_platform_graph.py  test_runs_endpoint.py  test_time_range.py  test_worklog_agent.py  test_worklog_intake.py
(+54 files in other folders)
