[project]
name = "agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langgraph>=1.2.5",
    "llama-index>=0.14.22",
    "openai>=2.41.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
