[project]
name = "agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "cryptography>=45.0.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.0.1",
    "llama-index>=0.14.22",
    "openai>=2.41.1",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "pyjwt>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
]
